--- a/css/styles.css
+++ b/css/styles.css
@@ -1,44 +1,129 @@
+
 body {
-  margin: 0;
+  font-family: "Nunito";
   text-align: center;
-  font-family: "Nunito", serif;
 }
 
-h1 {
-  margin: 50px auto 0 auto;
-  font-size: 5.625rem;
-  font-family: "Nunito", cursive;
-  color: #937DC2;
-}
-
-h2 {
-  margin: 50px auto 0 auto;
-  font-size: 2.5rem;
-  font-family: "Nunito", cursive;
-  font-weight: normal;
-  color: #937DC2;
-}
-
-h3 {
-  font-family: "Nunito", cursive;
-  color: #937DC2;
-}
-
-a {
-  color: #937DC2;
-  font-family: "Nunito", cursive;
-}
-
-a:hover {
-  color: #937DC2;
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Nunito";
+  font-weight: 700;
 }
 
 p {
-  line-height: 2;
+  color: #8f8f8f;
 }
 
-hr {
-  border: dotted #937DC2 6px;
-  border-bottom: none;
-  width: 4%
+/* Headings */
+
+.big-heading {
+  font-family: "Nunito";
+  font-weight: bold;
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+/* Containers */
+
+.container-fluid{
+  padding: 7% 15%;
+}
+
+/* Navigation Bar */
+
+.navbar {
+  padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+  font-family: "Nunito";
+  font-weight: 500;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+/* Sections */
+
+.colored-section {
+  background-color: #42BBB7;
+  color: #fff;
+}
+
+.colored-section-dark {
+  background-color: #557B83;
+  color: #fff;
+}
+
+.white-section {
+  background-color: #fff;
+}
+
+/* Buttons */
+
+.download-button {
+  margin: 5% 3% 5% 0;
+}
+
+/* Title Section */
+
+#title {
+  background-color: #42BBB7;
+  color: #fff;
+  text-align: left;
+}
+
+#title .container-fluid {
+  padding: 3% 15% 7%;
+}
+
+/* Title Image */
+
+.title-image {
+  width: 60%;
+  transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
+}
+
+/* Features Section */
+
+#features {
+  position: relative;
+}
+
+.feature-title {
+  font-size: 1.5rem;
+}
+
+.feature-box {
+  padding: 4.5%;
+}
+
+.icon {
+  color: #A2D5AB;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #42BBB7;
+}
+
+/* screenshot Section */
+
+#screenshots {
+  background-color: #42BBB7;
+}
+
+.screenshot-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.screenshot-image {
+  width: 20%;
+  margin: 20px;
 }
