--- a/css/styles.css
+++ b/css/styles.css
@@ -98,25 +98,12 @@ p {
   position: relative;
 }
 
-
-
-
-/* Tablet:768px. */
-@media (min-width: 768px) {
-  .feature-title {
-    font-size: 1.5rem;
-  }
-}
-
-/* Mobile :320px. */
-@media (max-width: 767px) {
-  .feature-title {
-    font-size: 2.5rem;
-  }
+.feature-title {
+  font-size: 1.5rem;
 }
 
 .feature-box {
-  padding: 4.5%;
+  padding: 2.5em;
 }
 
 .icon {
