--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ p {
   font-family: "Nunito";
   font-weight: bold;
   font-size: 3.5rem;
-  line-height: 1.5;
+  line-height: 1.2;
 }
 
 .section-heading {
@@ -78,8 +78,13 @@ p {
 }
 
 #title .container-fluid {
-  padding: 3% 5% 7%;
+  padding: 3% 5% 1%;
   max-width: 1000px;
+}
+
+.feature-summary {
+  font-size: 1.5rem;
+  padding: 10% 10% 10% 0;
 }
 
 /* Title Image */
